log
Tue 23 Apr 2024 10:50:34 PM UTC: 
 tests:  0|6
total_score: 0/70
3bd5854
Tue 23 Apr 2024 10:59:40 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
afe2911
Tue 23 Apr 2024 11:04:41 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:27: error: too many arguments to function ‘malloc’
   56 |   map->buckets = (Pair **)malloc(capacity, sizeof(Pair *));
      |                           ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:540:14: note: declared here
  540 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
      |              ^~~~~~
Compilation failed
ab0d252
Tue 23 Apr 2024 11:04:56 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4fcaf47
Tue 23 Apr 2024 11:08:25 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   43 |   return NULL;
      |          ^~~~
hashmap.c:42:6: note: declared here
   42 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c8782c3
Tue 23 Apr 2024 11:09:40 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:1: error: expected expression before ‘}’ token
   47 | }
      | ^
Compilation failed
5d8284c
Tue 23 Apr 2024 11:10:27 PM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  5|4
total_score: 30/70
2f531a2
Tue 23 Apr 2024 11:20:27 PM UTC: 
 hashmap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  6|3
total_score: 40/70
e8c49c6
Tue 23 Apr 2024 11:24:22 PM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  9|2
total_score: 50/70
28c940a
Tue 23 Apr 2024 11:26:53 PM UTC: 
 hashmap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
 tests:  12|1
total_score: 60/70
dfd8f6c
Tue 23 Apr 2024 11:45:55 PM UTC: 
 hashmap.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
 tests:  17|0
total_score: 70/70
f173029
